--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "graphql": "^16.6.0",
     "next": "12.2.3",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
